# Rust-Sentiment-Analysis

./: .env  Cargo.toml  README.md  RUN.md
.github/workflows/: rust.yml
data/: test-input-pride.txt  test-input-simple.csv  test-input-simple.txt
src/: bin.rs  lib.rs  message.rs
