[package]
name = "cs128-honors"
version = "0.1.0"
edition = "2018"

[lib]
name = "sentiment_analyzer"
path = "src/lib.rs"

[[bin]]
name = "sentiment_test"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sentiment = "0.1.1"
chrono = "0.4"
dialoguer = "0.9.0"
glob = "0.3.0"
csv = "1.1"
egg-mode = "0.16.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio = { version = "1.14.0", features = ["full"] }